Fix bad looking form errors for Web 2 >= 2.7.0
Starting with Web 2.7.0 the reworked form styles are only available for
for forms with the CSS class icinga-form. Since the Director uses its
own form styles, the styles for form errors no longer apply and thus
look ugly. This commit (re)introduces those rules for the Director.

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -330,7 +330,14 @@ input[type=text], input[type=button], select, select option, textarea {
 }
 
 form ul.form-errors {
+    list-style-type: none;
     margin-bottom: 0.5em;
+    padding: 0;
+
+    ul.errors {
+      list-style-type: none;
+      padding: 0;
+    }
 
     ul.errors li {
         background: @color-critical;
